@@ -1,7 +1,7 @@
 {
   "name": "inter-mediator/inter-mediator",
-  "version": "8",
-  "time": "2021-07-22",
+  "version": "9",
+  "time": "2021-07-24",
   "repositories": [
     {
       "type": "git",
