@@ -10,6 +10,10 @@ Please check: https://github.com/INTER-Mediator/INTER-Mediator
 Also the Migration Guide (Japanese) might be informative:
   https://inter-mediator.info/ja/for-developers/migration.html
 
+Ver.9 (in development)
+- IMLibUI.revertOnValicationError can control to retrieve the original value or not, after validation error.
+  The default value is true, and it means retrieve it.
+
 Ver.8 (July 22, 2021)
 - [Important] If you see the message which tells the ServiceServer couldn't boot just after installation,
   the best practice is install the Node.js on your operating system.
